--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.89.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-md-editor": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
@@ -31,9 +33,11 @@
     "next-sanity": "^9.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-is": "^19.1.0",
     "sanity": "^3.89.0",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
